--- a/HDB_CGI.csproj
+++ b/HDB_CGI.csproj
@@ -145,6 +145,7 @@
     <Content Include="hostlist.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="index.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
